samples/_failures_safe/1761281149_46bc51_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2026634d.c: In function ‘main’:
./samples/SAFE/__tmp_2026634d.c:159:21: error: expected declaration or statement at end of input
  159 |                     printf("\nMatrix A + B:\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_2026634d.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2026634d.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2026634d.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2026634d.c:159:21: error: expected declaration or statement at end of input
